@@ -792,6 +792,7 @@ bool IsGroupHealOverTimeSpell(uint16 spell_id);
 bool IsDebuffSpell(uint16 spell_id);
 bool IsResistDebuffSpell(uint16 spell_id);
 bool IsSelfConversionSpell(uint16 spell_id);
+bool IsBuffSpell(uint16 spell_id);
 uint32 GetMorphTrigger(uint32 spell_id);
 uint32 GetPartialMeleeRuneReduction(uint32 spell_id);
 uint32 GetPartialMagicRuneReduction(uint32 spell_id);
